slider text width on mobile quick fix

--- a/style/home.css
+++ b/style/home.css
@@ -271,7 +271,7 @@
         top: 35%;
         color: #f2f2f2;
         font-size: var(--font-size-m);
-        width: 250px; 
+        width: 240px; 
         text-align: start;
     }  
     
